feat: complete footer

--- a/store/blocks/deals.jsonc
+++ b/store/blocks/deals.jsonc
@@ -64,7 +64,7 @@
 
   "rich-text#title--deals": {
     "props": {
-      "text": "## Today's Deals",
+      "text": "## Recomendados para você",
       "blockClass": "title"
     }
   }
