--- a/store/blocks/minicart.jsonc
+++ b/store/blocks/minicart.jsonc
@@ -188,7 +188,7 @@
 
   "rich-text#minicart-default-empty-state": {
     "props": {
-      "text": "Your cart is empty."
+      "text": "Seu carrinho está vazio."
     }
   }
 }
