--- a/store/blocks/product/product-availability-and-quantity.jsonc
+++ b/store/blocks/product/product-availability-and-quantity.jsonc
@@ -14,7 +14,7 @@
       "blockClass": "desktop",
       "threshold": "10",
       "lowStockMessage": "Only {quantity} left!",
-      "highStockMessage": "Item in stock!"
+      "highStockMessage": "Item em estoque"
     }
   },
 
