--- a/store/blocks/releases.jsonc
+++ b/store/blocks/releases.jsonc
@@ -63,7 +63,7 @@
 
   "rich-text#title--releases": {
     "props": {
-      "text": "## New Releases",
+      "text": "## Novidades da Semana",
       "blockClass": "title"
     }
   }
