--- a/store/blocks/components/popular-picks.jsonc
+++ b/store/blocks/components/popular-picks.jsonc
@@ -51,7 +51,7 @@
   },
   "list-context.product-list#popular": {
     "blocks": [
-      "product-summary.shelf#complete"
+      "product-summary.shelf#list"
     ],
     "children": [
       "slider-layout#popularProducts"
@@ -62,7 +62,7 @@
   },
   "list-context.product-list#popularMobile": {
     "blocks": [
-      "product-summary.shelf#complete"
+      "product-summary.shelf#list"
     ],
     "children": [
       "slider-layout#popularProducts"
@@ -76,8 +76,8 @@
     "props": {
       "itemsPerPage": {
         "desktop": 6,
-        "tablet": 4,
-        "phone": 2
+        "tablet": 3,
+        "phone": 1
       },
       "infinite": false,
       "fullWidth": true,
