--- a/store/blocks/components/trending.jsonc
+++ b/store/blocks/components/trending.jsonc
@@ -13,48 +13,47 @@
       "list-context.product-list#trending"
     ]
   },
-  // "flex-layout.row#trendingHead": {
-  //   "children": [
-  //     "rich-text#trendingTitle",
-  //     "link#trending"
-  //   ],
-  //   "props": {
-  //     "blockClass": "trendingHead",
-  //     "preventHorizontalStretch": true,
-  //     "preserveLayoutOnMobile": true
-  //   }
-  // },
-  // "rich-text#trendingTitle": {
-  //   "props": {
-  //     "text": "### What's trending",
-  //     "blockClass": "trendingTitle"
-  //   }
-  // },
-  // "link#trending": {
-  //   "props": {
-  //     "label": "Ver tudo",
-  //     "blockClass": "trendingLink",
-  //     "href": "/trending"
-  //   }
-  // },
+  "flex-layout.row#trendingHead": {
+    "children": [
+      "rich-text#trendingTitle",
+      "link#trending"
+    ],
+    "props": {
+      "blockClass": "trendingHead",
+      "preventHorizontalStretch": true,
+      "preserveLayoutOnMobile": true
+    }
+  },
+  "rich-text#trendingTitle": {
+    "props": {
+      "text": "### Novidades da Semana",
+      "blockClass": "trendingTitle"
+    }
+  },
+  "link#trending": {
+    "props": {
+      "label": "Ver tudo",
+      "blockClass": "trendingLink",
+      "href": "/releases"
+    }
+  },
   "list-context.product-list#trending": {
     "blocks": [
-      "product-summary.shelf#complete"
+      "product-summary.shelf#list"
     ],
     "children": [
       "slider-layout#trendingProducts"
     ],
     "props": {
-      "orderBy": "OrderByReleaseDateDESC"/* ,
-      "maxItems": "6" */
+      "orderBy": "OrderByReleaseDateDESC"
     }
   },
   "slider-layout#trendingProducts": {
     "props": {
       "itemsPerPage": {
         "desktop": 6,
-        "tablet": 4,
-        "phone": 2
+        "tablet": 3,
+        "phone": 1
       },
       "infinite": false,
       "fullWidth": true,
