--- a/store/blocks/product/box.jsonc
+++ b/store/blocks/product/box.jsonc
@@ -53,6 +53,14 @@
       "flex-layout.row#buy-buttons"
     ]
   },
+  "allowed-content#product-price-list": {
+    "children": [
+      "flex-layout.row#product-price",
+      // "flex-layout.row#location-availability",
+      // "flex-layout.row#product-availability-and-quantity",
+      "flex-layout.row#buy-buttons"
+    ]
+  },
   "disallowed-content#product-price": {
     "children": ["rich-text#product-price"]
   },
